[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Nick <tre.9513@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.1"
uvicorn = "0.22.0"
sqlalchemy = "2.0.13"
psycopg2 = "2.9.6"
python-dotenv = "1.0.0"
alembic = "1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
