[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Nick <tre.9513@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.22.0"
sqlalchemy = "2.0.13"
psycopg2 = "2.9.6"
python-dotenv = "1.0.0"
alembic = "1.11.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.104.1"
pydantic = {extras = ["email"], version = "^2.4.2"}
pytest = "7.4.0"
httpx = "0.24.1"
python-jose = "3.3.0"
python-multipart = "0.0.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
